--- a/docs/Document-Manager/Document type/Experience Creation.mdx
+++ b/docs/Document-Manager/Document type/Experience Creation.mdx
@@ -32,14 +32,14 @@ To begin, navigate from the Vue Home Page. Hover over the Data Hub’s Document 
 
 - Our AI analyzes and predicts a base taxonomy for you that you can validate, edit, add to, or delete from.
 - To view or manage your taxonomy, click the ‘Taxonomy’ tab. Here, you can add or delete attributes as needed.
-![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/type10.png 'a title')
+![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/righttabledt.png 'a title')
 - To add, click the ‘Add new’ button or use the ‘annotation’ tools on the toolbar. Draw an annotation box on the preview to indicate where the attribute value can be found on the document.
-![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/type11.png 'a title')
+![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/annotatedt.png 'a title')
 - To create or edit an Attribute, provide a Name, Annotation, and any additional information like its data type and related output formatting configurations.
-![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/type12.png 'a title')
+![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/righttabledt.png 'a title')
 - To validate or edit the extracted values of your taxonomy, click the ‘Page Extractions’ tab. Here, you will be able to view each extracted value and the confidence level with which it was predicted.
-![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/type13.png 'a title')
+![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/pageextract.png 'a title')
 - To view table extractions, check the box called ‘view extractions as overlay’ on the document preview or click the ‘view’ button to view your extracted values as a table. Here, you can also enable the ‘show crops’ toggle to view a cell by cell comparison of the document annotation crops and the extracted values.
-![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/type14.png 'a title')
+![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/dt5.png 'a title')
 Once the desired taxonomy has been configured, click the ‘Register’ button. Congratulations! You have now created your very own custom classification model.
-![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/type15.png 'a title')
+![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/registerdt.png 'a title')
