--- a/docs/Document-Manager/Documents/Document Annotation and review.mdx
+++ b/docs/Document-Manager/Documents/Document Annotation and review.mdx
@@ -24,18 +24,18 @@ Review extractions and provide feedback on your uploaded documents through our D
 To access any document’s annotate screen, click on the document name or the ‘annotate’ action in the document listing. Note that the annotation screen is accessible only after the document has been processed.
 
 #### Document Preview
-![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/doc9.png 'a title')
+![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/dp1.png 'a title')
 
 On the document annotation screen, you'll see a side-by-side view of the document preview and its extracted values. 
 
 - To view or change the Document Type classification, use the drop-down at the top of the page extraction panel. Changing the Document Type reprocesses the document to derive relevant data based on your selection.
 - Each attribute's annotation box on the document preview corresponds to an extracted value card on the page extraction panel and vice versa.
-![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/doc10.png 'a title')
+![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/dp2.png 'a title')
 
 #### Page Extractions
 
 - Navigate through each page using the vertical scrollbar beside the document preview to see each page’s extracted values on the Page Extraction Panel.
-![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/doc11.png 'a title')
+![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/dp3.png 'a title')
 
 - Each card on the panel contains an attribute name, the extracted value, and a confidence score. Available actions include:
     - **Edit Extracted Value**: Edit the value directly within the input field.
@@ -47,7 +47,7 @@ On the document annotation screen, you'll see a side-by-side view of the documen
     - **Overlay**: Overlays the table on the canvas with the extracted values.
     - **Data Table**: Displays extracted values in a separate, spreadsheet-like table for detailed viewing and editing.
     
-![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/doc12.png 'a title')
+![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/dp4.png 'a title')
 
 #### Feedback & Learning
 
