--- a/docs/Data-set/datasets.mdx
+++ b/docs/Data-set/datasets.mdx
@@ -1,11 +1,14 @@
 ---
 title: Datasets
 sidebar_label: Datasets
-sidebar_position: 4
-
+slug: /
 ---
 
 
+<head>
+  <title></title>
+  <meta name="description" content="" />
+</head>
 
 ### Introduction
 
