--- a/docs/SSO/Google-SSO.mdx
+++ b/docs/SSO/Google-SSO.mdx
@@ -3,19 +3,19 @@ title: Google Cloud Platform
 sidebar_position: 1
 slug: /
 ---
-### Step 1: Access APIs & Services
+ Step 1: Access APIs & Services
 
 Navigate to the **APIs & Services** section within your GCP project.
 
 ![APIs and Services screen](https://d1r1e7xjkfj7nz.cloudfront.net/image-20240422-100541.png "APIs and Services")
-
-#### Step 2: Select Credentials
+ 
+ Step 2: Select Credentials
 
 In the APIs & Services dashboard, click on the **Credentials** tab.
 
 ![Credentials screen](https://d1r1e7xjkfj7nz.cloudfront.net/image-20240422-100644.png "Credentials")
 
-#### Step 3: Create an OAuth Client ID
+ Step 3: Create an OAuth Client ID
 
 Create an OAuth Client ID credentials. Choose **Web application** as the application type.
 
@@ -27,7 +27,7 @@ Create an OAuth Client ID credentials. Choose **Web application** as the applica
 
 ![Client ID and Secret](https://d1r1e7xjkfj7nz.cloudfront.net/image-20240422-101523.png "Client ID and Secret")
 
-#### Step 4: Configure Redirect URIs
+ Step 4: Configure Redirect URIs
 
 Paste the Redirect URIs generated into the **Authorized redirect URIs** section in your application settings.
 
