--- a/docs/SSO/Azure.mdx
+++ b/docs/SSO/Azure.mdx
@@ -8,31 +8,31 @@ sidebar_position: 2
 
 
 
-### Step 1: Open App Registration
+ Step 1: Open App Registration
 
 Navigate to the **App Registration** section within your Microsoft Entra ID.
 
 ![App Registration screen](https://d1r1e7xjkfj7nz.cloudfront.net/image-20240430-103108.png "App Registration")
 
-### Step 2: Select New Registration
+ Step 2: Select New Registration
 
 Click on **New registration** to start the registration of a new application.
 
 ![New Registration](https://d1r1e7xjkfj7nz.cloudfront.net/image-20240430-103521.png "New Registration")
 
-### Step 3: Application Details
+ Step 3: Application Details
 
 After registration, you will obtain a **Client ID** and **Client Secret**. Keep these details secure as they will be used in the following steps of your setup.
 
 ![Application Details](https://d1r1e7xjkfj7nz.cloudfront.net/image-20240430-103836.png "Application Details")
 
-### Step 4: Configure Optional Claims
+ Step 4: Configure Optional Claims
 
 Under **Optional Claims**, add necessary fields such as email. Ensure that Azure users have the respective details present in their account to utilize these fields effectively.
 
 ![Optional Claims](https://d1r1e7xjkfj7nz.cloudfront.net/image-20240430-104251.png "Optional Claims")
 
-### Step 5: Set Redirect URL in Authentication
+ Step 5: Set Redirect URL in Authentication
 
 Navigate to the **Authentication** section and fill in the redirect URL as required for your application.
 
