--- a/docs copy/Integration/Android.mdx
+++ b/docs copy/Integration/Android.mdx
@@ -252,4 +252,4 @@ class MainActivity {
 
 ## I want to know more!
 
-Have any questions? Reach out to MSD [Support](https://support.vue.ai/api/#/) to speak to someone smart, quickly.
+Have any questions? Reach out to MSD [Support]( support@vue.ai) to speak to someone smart, quickly.
