--- a/docs copy/Integration/iOS.mdx
+++ b/docs copy/Integration/iOS.mdx
@@ -224,4 +224,4 @@ func application(_ application: UIApplication,
 
 ## I want to know more!
 
-Have any questions? Reach out to SDK [Support](https://support.vue.ai/api/#/) to speak to someone smart, quickly.
+Have any questions? Reach out to SDK [Support]( support@vue.ai) to speak to someone smart, quickly.
