--- a/docs/Integration/React.mdx
+++ b/docs/Integration/React.mdx
@@ -399,4 +399,4 @@ No worries, here are some links that you will find useful:
 
 - **[Advanced React Native Guide](https://reactnative.dev/docs/environment-setup)**
 
-Have any questions? Reach out to SDK [Support](https://support.vue.ai/api/#/) to speak to someone smart, quickly.
+Have any questions? Reach out to SDK [Support]( support@vue.ai) to speak to someone smart, quickly.
