--- a/docs/Data-set/datasets.mdx
+++ b/docs/Data-set/datasets.mdx
@@ -1,7 +1,7 @@
 ---
 title: Datasets
 sidebar_label: Datasets
-slug: /
+sidebar_position: 2
 ---
 
 
@@ -10,9 +10,6 @@ slug: /
   <meta name="description" content="" />
 </head>
 
-### Introduction
-
-Vue provides the ability to upload and utilize datasets in your workflows. Document processing workflows often generate large datasets that are challenging to track. Vue also enables the analysis and profiling of datasets directly on the platform, for both existing and newly uploaded/generated ones. You can generate and create reports to view metrics and visualizations, obtaining the information you need in a quick and readable manner.
 
 ### Navigation
 ![Alt text](https://d1r1e7xjkfj7nz.cloudfront.net/set1.png 'a title')
